--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "axios": "^1.3.2",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
